--- a/src/main/java/br/upe/ui/TelaPrincipal.form
+++ b/src/main/java/br/upe/ui/TelaPrincipal.form
@@ -9,7 +9,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="70247" binding="pnlAdicionar" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="70247" binding="pnlAdicionar" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="North"/>
         <properties/>
@@ -17,18 +17,13 @@
         <children>
           <component id="42f96" class="javax.swing.JTextField" binding="txtDescricaoTarefa">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
-          </component>
-          <component id="9298c" class="javax.swing.JButton" binding="btnAdicionarTarefa">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
             <properties>
-              <text value="Adicionar"/>
+              <foreground color="-7764861"/>
+              <text value="descrição da tarefa a ser feita"/>
             </properties>
           </component>
           <component id="3a0a3" class="javax.swing.JCheckBox" binding="chkExibirFinalizadas">
@@ -39,14 +34,70 @@
               <text value="Exibir Finalizadas"/>
             </properties>
           </component>
+          <component id="aa017" class="javax.swing.JTextField" binding="txtDataFinalizacao">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <foreground color="-7764861"/>
+              <text value="data no formato dia/mês/ano"/>
+            </properties>
+          </component>
+          <component id="9298c" class="javax.swing.JButton" binding="btnAdicionarTarefa">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Adicionar"/>
+            </properties>
+          </component>
+          <component id="d6322" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Descrição"/>
+            </properties>
+          </component>
+          <component id="7333c" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Prazo Final"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <component id="a4d44" class="javax.swing.JTable" binding="tblTarefas" custom-create="true">
+      <scrollpane id="251f">
         <constraints border-constraint="Center"/>
         <properties>
-          <surrendersFocusOnKeystroke value="true"/>
+          <inheritsPopupMenu value="false"/>
         </properties>
-      </component>
+        <border type="none" title="Tarefas" title-justification="2" title-position="2">
+          <font/>
+          <title-color color="-16777216"/>
+          <color color="-5524801"/>
+        </border>
+        <children>
+          <component id="a4d44" class="javax.swing.JTable" binding="tblTarefas" custom-create="true">
+            <constraints/>
+            <properties>
+              <autoCreateColumnsFromModel value="true"/>
+              <autoCreateRowSorter value="false"/>
+              <autoResizeMode value="1"/>
+              <showHorizontalLines value="true"/>
+              <showVerticalLines value="false"/>
+              <surrendersFocusOnKeystroke value="true"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
+  <inspectionSuppressions>
+    <suppress inspection="NoLabelFor"/>
+  </inspectionSuppressions>
 </form>
